tests/algorithms/x/Java/graphs/strongly_connected_components.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden452_strongly_connected_components1383261751/001/Main.java:8: error: method concat in class Main cannot be applied to given types;
                order = ((int[])(concat(order, topology_sort(((int[][])(graph)), neighbour, ((boolean[])(visited))))));
                                 ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden452_strongly_connected_components1383261751/001/Main.java:20: error: method concat in class Main cannot be applied to given types;
                comp = ((int[])(concat(comp, find_component(((int[][])(graph)), neighbour, ((boolean[])(visited))))));
                                ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
/tmp/TestJavaTranspiler_Algorithms_Golden452_strongly_connected_components1383261751/001/Main.java:44: error: method concat in class Main cannot be applied to given types;
                order_1 = ((int[])(concat(order_1, topology_sort(((int[][])(graph)), i, ((boolean[])(visited))))));
                                   ^
  required: T[],T[]
  found:    int[],int[]
  reason: inference variable T has incompatible bounds
    equality constraints: int
    upper bounds: Object
  where T is a type-variable:
    T extends Object declared in method <T>concat(T[],T[])
3 errors
